--- a/assets/styles/slider.css
+++ b/assets/styles/slider.css
@@ -11,7 +11,7 @@
 section {
   position: relative;
   width: 100%;
-  min-height: 100vh;
+  /* min-height: 100vh; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -21,14 +21,14 @@ section {
 
 .swiper {
   width: 100%;
-  padding-top: 50px;
-  padding-bottom: 50px;
+  /* padding-top: 50px;
+  padding-bottom: 50px; */
 }
 
 .swiper-slide {
   width: 800px;
   height: 400px;
-  box-shadow: 0 15px 50px rgba(0, 0, 0, 0.2);
+  /* box-shadow: 0 15px 50px rgba(0, 0, 0, 0.2); */
   /* filter: blur(1px); */
   border-radius: 40px;
   display: flex;
@@ -36,11 +36,18 @@ section {
   justify-content: space-between;
   align-items: center;
   padding: 68px 0px;
+  margin-top: 60px;
+
+  -webkit-box-shadow: inset 35px 1px 168px -23px rgba(255,255,255,1);
+-moz-box-shadow: inset 35px 1px 168px -23px rgba(255,255,255,1);
+box-shadow: inset 35px 1px 168px -23px rgba(255,255,255,1);
 }
 
 .swiper-slide.swiper-slide-active {
     padding: 68px 93px;
     flex-direction: column;
+
+    box-shadow: none;
 }
 
 .swiper-slide-active {
@@ -151,4 +158,8 @@ section {
 .swiper-3d .swiper-slide-shadow-left,
 .swiper-3d .swiper-slide-shadow-right {
   background-image: none;
+}
+
+.swiper-button-disabled {
+  opacity: 0.2;
 }
