--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -23,12 +23,14 @@ body {
     height: 100%;
 
     color: aliceblue;
+
 }
 
 body.no-scroll {
   height: 100vh;
   overflow: hidden;
-  padding-right: 15px;
+  /* padding-right: 15px; */
+
 }
 
 
@@ -36,12 +38,14 @@ body.no-scroll {
 .page {
   max-width: 1920px;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   margin: 0 auto;
   position: relative;
   z-index: 1;
   top: 0;
   transition: all 1.2s ease-out;
+
+  overflow: hidden;
 }
 
 .page section {
@@ -269,7 +273,11 @@ body.no-scroll {
   height: 100vh;
 
   position: absolute;
-  z-index: 2;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
 
 }
 
@@ -412,7 +420,7 @@ body.no-scroll {
   text-transform: uppercase;
 }
 
-#section_two .screen__title-block {
+/* #section_two .screen__title-block {
   margin: 0 auto;
   text-align: center;
 
@@ -423,7 +431,7 @@ body.no-scroll {
 
   animation: animateBorder 4s linear forwards;
   animation-delay: 4s;
-}
+} */
 
 #section_two .screen__title {
   display: block;
@@ -435,10 +443,10 @@ body.no-scroll {
 }
 
 #section_two .screen__title.screen__title--firsth  {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#fff), color-stop(50%, #fff), color-stop(50.1%, transparent));
-  background-image: linear-gradient(180deg, #fff 0%, #fff 50%, transparent 50.1%);
+  background-image: rgba(255, 255, 255, .1);
+  background-image: rgba(255, 255, 255, .1);
   background-position: 100% 0%;
-  background-size: 100% 0%;
+  background-size: 100% 200%;
 
   -webkit-text-stroke-color: #fff;
   -webkit-text-stroke-opacity: .1;
@@ -446,8 +454,8 @@ body.no-scroll {
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
 
-  animation: animateBg 4s linear forwards;
-  animation-delay: 8s;
+  /* animation: animateBg 4s linear forwards;
+  animation-delay: 8s; */
 
 }
 
@@ -458,7 +466,7 @@ body.no-scroll {
 
   background-image: linear-gradient(to right, #0075FF 0%, #00E0FF 100%);
   background-position: 100% 100%;
-  background-size: 100% 0%;
+  background-size: 100% 200%;
 
   -webkit-text-stroke-color: #fff;
   -webkit-text-stroke-opacity: .1;
@@ -467,22 +475,59 @@ body.no-scroll {
   -webkit-background-clip: text;
 
 
-  animation: animateBg 4s linear forwards;
-  animation-delay: 12s;
+  /* animation: animateBg 4s linear forwards;
+  animation-delay: 12s; */
+}
+
+#section_two #innovate_1 {
+  opacity: 0;
+
+}
+
+#section_two #innovate_2 {
+  opacity: 0;
+}
+
+#section_two #innovate_3 {
+  opacity: 0;
+}
+
+.screen--innovate.visible #innovate_1 {
+  animation: animateFill 4s linear forwards, hideFill 2s linear forwards;
+  animation-delay: 1s, 4s;
+}
+
+.screen--innovate.visible #innovate_2 {
+  animation: animateFill 2s linear forwards;
+  animation-delay: 5s;
+}
+
+
+
+.screen--innovate.visible #innovate_3 {
+  animation: animateFill 2s linear forwards;
+  animation-delay: 7s;
 }
 
 /* #section_two .screen__title:hover{
   background-size: 100% 200%;
 } */
 
-@keyframes animateBg {
+@keyframes animateFill {
   0% {
-    background-size: 100% 0%;
+    opacity: 0;
   } 99% {
-    background-size: 100% 200%;
+    opacity: 100%;
   } 100% {
-    -webkit-text-stroke-color: transparent;
-    background-size: 100% 200%;
+    opacity: 100%;
+  }
+}
+
+@keyframes hideFill {
+  0% {
+    opacity: 1;
+  } 100% {
+    opacity: 0;
   }
 }
 
@@ -773,6 +818,7 @@ body.no-scroll {
 
 .screen__innovate-content-center .innovate-content__item-text > span {
   display: block;
+  margin-left: -40px;
 }
 
 /*innovate*/
@@ -1317,14 +1363,95 @@ body.no-scroll {
 .block-name__line {
   width: 206px;
   height: 2px;
+
+  position: relative;
+  z-index: 1;
 }
 
-.screen--black .block-name__line {
+.block-name__line::after {
+  content: "";
+  width: 0;
+  height: 100%;
+  display: block;
+
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 2;
+
+
+}
+
+.block-name__line::before {
+  content: "";
+  width: 10px;
+  height: 10px;
+
+  display: block;
+
+  position: absolute;
+  top: -50%;
+  right: 50%;
+  z-index: 2;
+
+  transform: rotate(45deg) translate(0, -50%) scale(0);
+
+
+}
+
+.block-name__line.active::after {
+  animation: showLineTitle 1.4s linear forwards;
+}
+
+.block-name__line.active::before {
+  animation: animateSquere 1.4s linear forwards, moveSquere .8s linear forwards;
+  animation-delay: .7s, .7s;
+}
+
+
+@keyframes moveSquere {
+  0% {
+    right: 50%;
+  } 100% {
+    right: 110%;
+  }
+
+}
+
+@keyframes animateSquere {
+  0% {
+    transform: rotate(45deg) translate(0, -50%) scale(0);
+  } 50% {
+    transform: rotate(45deg) translate(0, -50%) scale(1);
+  } 100% {
+    transform: rotate(45deg) translate(0, -50%) scale(0);
+  }
+
+}
+
+
+.screen--black .block-name__line::after {
   background-color: var(--white);
 }
 
-.screen--white .block-name__line {
+.screen--white .block-name__line::after {
   background-color: var(--black);
+}
+
+.screen--black .block-name__line::before {
+  background-color: var(--white);
+}
+
+.screen--white .block-name__line::before {
+  background-color: var(--black);
+}
+
+@keyframes showLineTitle {
+  0% {
+    width: 0;
+  } 100% {
+    width: 100%;
+  }
 }
 
 .block-name__title {
@@ -1722,8 +1849,8 @@ body.no-scroll {
 }
 
 .grid--advantages {
-  flex-wrap: wrap;
-  display: flex;
+
+  display: grid;
   grid-template-columns: 1fr 1fr;
   row-gap: 79px;
   column-gap: 9px;
@@ -1761,6 +1888,76 @@ body.no-scroll {
 .advantages__item.item {
   display: flex;
 }
+
+.advantages__item.item:nth-child(1) {
+  opacity: .9;
+}
+
+.advantages__item.item:nth-child(2) {
+  opacity: .8;
+}
+
+.advantages__item.item:nth-child(3) {
+  opacity: .6;
+}
+
+.advantages__item.item:nth-child(4) {
+  opacity: .4;
+}
+
+@keyframes changeOpacity {
+  0% {
+    opacity: .9;
+  } 100% {
+    opacity: 1;
+  }
+}
+
+@keyframes changeOpacity_2 {
+  0% {
+    opacity: .8;
+  } 100% {
+    opacity: 1;
+  }
+}
+
+@keyframes changeOpacity_3 {
+  0% {
+    opacity: .6;
+  } 100% {
+    opacity: 1;
+  }
+}
+
+@keyframes changeOpacity_4 {
+  0% {
+    opacity: .4;
+  } 100% {
+    opacity: 1;
+  }
+}
+
+
+
+.screen.screen--advantages.active .advantages__item.item:nth-child(1) {
+  animation: changeOpacity 1.5s linear forwards;
+}
+
+.screen.screen--advantages.active .advantages__item.item:nth-child(2) {
+  animation: changeOpacity_2 1.5s linear forwards;
+  animation-delay: .1s;
+}
+
+.screen.screen--advantages.active .advantages__item.item:nth-child(3) {
+  animation: changeOpacity_3 1.5s linear forwards;
+  animation-delay: .2s;
+}
+
+.screen.screen--advantages.active .advantages__item.item:nth-child(4) {
+  animation: changeOpacity_4 1.5s linear forwards;
+  animation-delay: .3s;
+}
+
 
 .advantages__item-title {
   margin-bottom: 15px;
@@ -2144,15 +2341,15 @@ body.no-scroll {
   animation-duration: 2s; */
 }
 
-.screen__title-line-middle-t {
-
+.screen__title-svg {
+  display: block;
   opacity: 1;
 
   position: relative;
   z-index: 1;
 }
 
-.screen__title-line-middle-t::after {
+.screen__title-svg::after {
   content: "";
   width: 0;
   height: 14px;
@@ -2161,23 +2358,39 @@ body.no-scroll {
   background: #fff;
 
   position: absolute;
-  top: 50%;
+  top: 65%;
+  right: 26%;
   transform: translateY(-50%);
   z-index: 2;
 
-  animation: showLine 1s linear forwards;
-  animation-delay: 7s;
+  animation: showLine 1s linear forwards, changeColorLine 2s linear forwards;
+  animation-delay: 7.7s, 9s;
 }
 
 @keyframes showLine {
   0% {
+    right: 32%;
     width: 0;
   } 100% {
     width: 76px;
+    right: 26%;
   }
 }
 
-.screen__title-line-middle-t::before {
+@media (max-width: 1280px) {
+  @keyframes showLine {
+    0% {
+      right: 32%;
+      width: 0;
+    } 100% {
+      width: 53px;
+      right: 26%;
+    }
+  }
+
+}
+
+.screen__title-svg::before {
   content: "";
   width: 1px;
   height: 40px;
@@ -2186,14 +2399,14 @@ body.no-scroll {
   background: #fff;
 
   position: absolute;
-  top: 20%;
-  left: 250px;
+  top: 30%;
+  right: -14%;
 
   z-index: 2;
 
   transform:rotate(0deg);
 
-  animation: animateLine 2s linear forwards;
+  animation: animateLine 2.5s linear forwards;
   animation-delay: 5s;
 
 }
@@ -2203,50 +2416,76 @@ body.no-scroll {
     width: 1px;
     height: 40px;
     top: 20%;
-    left: 250px;
+    right: -14%;
   } 30% {
     width: 1px;
     height: 40px;
     top: 100%;
-    left: 250px;
+    right: -14%;
   } 35% {
     width: 1px;
     height: 40px;
     top: 100%;
-    left: 250px;
+    right: -14%;
 
 
   } 55% {
     width: 1px;
     height: 1px;
     top: 100%;
-    left: 250px;
+    right: -14%;
   } 70% {
     width: 40px;
     height: 1px;
     top: 100%;
-    left: 20px;
+    right: -14%;
   } 80% {
     width: 1px;
     height: 1px;
     top: 100%;
-    left: 20px;
+    right: 32%;
   } 90% {
     width: 1px;
     height: 40px;
-    top: 60%;
-    left: 20px;
+    top: 80%;
+    right: 32%;
   }  100% {
     width: 1px;
     height: 0px;
-    top: 40%;
-    left: 20px;
+    top: 70%;
+    right: 32%;
   }
 
 }
 
+@keyframes changeColorLine {
+  0% {
+    background: #fff;
+  } 100% {
+    background: #02C5FF;
+  }
+}
+
+.screen__title-svg-icon {
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 2;
+
+  opacity: 0;
+
+  animation:  showMainTitle 2s linear forwards;
+  animation-delay: 9s;
+}
 
 
+@keyframes showMainTitle {
+  0% {
+    opacity: 0;
+  } 100% {
+    opacity: 1;
+  }
+}
 
 
 .screen__title.screen__title--main {
@@ -2337,4 +2576,553 @@ body.no-scroll {
     fill-opacity: 1;
   }
 
+}
+
+/*media*/
+
+.main__wrapper {
+  max-width: 1920px;
+  position: relative;
+  z-index: 1;
+
+  margin: 0 auto;
+
+}
+
+@media ( max-width: 1800px) {
+  .screen.screen--main .screen__wrapper .screen__wrapper-body {
+    margin-top: 160px;
+  }
+
+  .screen__title {
+    max-width: 720px;
+  }
+
+  .screen.screen--main .screen__wrapper, .screen.screen--innovate .screen__wrapper {
+    padding: 25px 0;
+  }
+
+  .header {
+    top: 25px;
+  }
+
+  .footer {
+    bottom: 40px;
+  }
+
+  .screen__wrapper .screen__wrapper-footer {
+    bottom: 0;
+  }
+
+  .tech-block__list-item {
+    max-width: 110px;
+    height: 90px;
+  }
+
+  .owl-carousel .owl-item img {
+    object-fit: fill;
+  }
+
+  .screen__title-svg::after {
+    height: 12px;
+    right: 25.5%;
+    max-width: 60px;
+  }
+
+  .block__content.block__content--flex .owl-carousel {
+    max-width: 1070px!important;
+  }
+
+  .block__content-title {
+    font-size: 3.5rem;
+  }
+
+  .block__content-subtitle {
+    font-size: 5rem;
+    top: -30px;
+  }
+
+  .owl-carousel .owl-item img {
+    height: 100px;
+    object-fit: contain;
+  }
+
+  .advantages__item-title {
+    font-size: 2.6rem;
+  }
+
+  .advantages__item-number {
+    font-size: 15rem;
+    right: -8%;
+  }
+
+ }
+
+
+@media ( max-width: 1680px) {
+  .container {
+    max-width: 1440px;
+    padding-left: 70px;
+    padding-right: 70px;
+  }
+
+  .cascade-slider_item {
+    width: 100%;
+    max-width: 720px;
+    height: 350px;
+
+  }
+
+  .slider__title {
+    font-size: 3.3rem;
+  }
+
+  .slider__desc {
+    font-size: 1.8rem;
+  }
+
+  .screen.screen--main .screen__wrapper .screen__wrapper-body {
+    margin-top: 120px;
+  }
+
+  .screen.screen--innovate .screen__wrapper-body {
+    row-gap: 60px;
+  }
+
+  #section_two .screen__title {
+    font-size: 160px;
+  }
+
+  .screen__innovate-content-center .innovate-content__item-text {
+    width: 268px;
+
+    font-size: 20px;
+  }
+
+  .screen__innovate-content-left {
+    margin-right: 55px;
+  }
+
+  .screen__innovate-content-right {
+    margin-left: 55px;
+  }
+
+  .screen__innovate-content-left .innovate-content__item-wrapper, .screen__innovate-content-right .innovate-content__item-wrapper {
+    padding: 5px 32px;
+  }
+
+  .block__content-title.block__content-title--our-client {
+    font-size: 4.2rem;
+  }
+
+  .block__content-subtitle.block__content-subtitle--our-clients {
+    font-size: 8rem;
+
+    top: -33px;
+    right: -30px;
+  }
+
+  .screen.screen--main .screen__wrapper, .screen.screen--innovate .screen__wrapper {
+    padding: 25px 0;
+  }
+
+  .screen__wrapper-footer-title {
+    height: 60px;
+  }
+
+  .block__content.block__content--flex .owl-carousel {
+    max-width: 937px!important;
+  }
+
+  .header {
+    top: 20px;
+  }
+
+  .footer {
+    bottom: 20px;
+  }
+
+  .screen__wrapper .screen__wrapper-footer {
+    bottom: 10px;
+  }
+
+  .screen__title {
+    max-width: 659px;
+  }
+
+  .logo--head {
+    width: 308px;
+  }
+
+  .footer__wrapper-footer-title {
+    font-size: 1.4rem;
+  }
+
+  .portfolio__item-link {
+    font-size: 1.6rem;
+  }
+
+  .btn__3um8i {
+    font-size: 1.6rem;
+  }
+
+  .advantages__item.item:nth-child(3) {
+    margin-left: -30px;
+  }
+
+  .block-content.block-content--contacts .block-content--title {
+    font-size: 5rem;
+  }
+
+  .block-content-info-button {
+    font-size: 2.2rem;
+  }
+
+  .screen__innovate-content-right .innovate-content__item:last-of-type img {
+    width: 120px;
+  }
+
+}
+
+@media ( max-width: 1580px) {
+  .screen.screen--innovate .screen__box-shadow {
+    max-width: 310px;
+  }
+
+  .screen__innovate-content-left .innovate-content__item-text, .screen__innovate-content-right .innovate-content__item-text {
+    font-size: 14px;
+  }
+
+  .screen--innovate .screen__title-block {
+    max-width: 700px;
+  }
+
+  .advantages__item-content {
+    max-width: 420px;
+  }
+
+  .advantages__item-title {
+    font-size: 2.3rem;
+  }
+
+  .advantages__item-text {
+    font-size: 1.4rem;
+  }
+
+  .advantages__item.item:nth-child(3) {
+    margin-left: 0;
+  }
+
+  .advantages__item-number {
+    font-size: 13rem;
+    right: -13%;
+  }
+
+  .block__content-subtitle.block__content-subtitle--our-clients {
+    font-size: 6rem;
+    top: -27px;
+    right: -5px;
+  }
+
+  .block__content-title.block__content-title--our-client {
+    font-size: 4rem;
+  }
+
+  .block-content.block-content--contacts .block-content--title {
+    font-size: 4.5rem;
+  }
+
+  .block-content-info-button {
+    font-size: 2rem;
+    padding-top: 30px;
+    padding-bottom: 30px
+  }
+
+  .block-content-info__contact-tel {
+    margin-top: 20px;
+    font-size: 2.6rem;
+  }
+
+  .block__content-title {
+    font-size: 3.2rem;
+  }
+
+  .block__content-subtitle {
+    font-size: 4.5rem;
+    top: -20px;
+  }
+
+  /* .screen__innovate-content-right .innovate-content__item:last-of-type img {
+    width: 100px;
+  }
+
+  .screen__innovate-content-right .innovate-content__item:first-of-type  {
+    padding: 5px 30px;
+  } */
+
+
+}
+
+@media ( max-width: 1480px) {
+  .embet {
+    max-width: 1080px;
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+
+  .screen__box-shadow {
+    max-width: 1080px;
+  }
+
+  .block__content-body.our-clients {
+    max-width: 1040px;
+  }
+
+  .our-clients__item {
+    width: 171px;
+    height: 171px;
+    padding: 25px;
+  }
+
+  .block__content-title.block__content-title--our-client {
+    font-size: 3.5rem;
+  }
+
+  .block__content-subtitle.block__content-subtitle--our-clients {
+    font-size: 5rem;
+    top: -20px;
+    right: 0px;
+  }
+
+  .block__content.block__content--flex .owl-carousel {
+    max-width: 709px!important;
+  }
+
+}
+
+@media ( max-width: 1280px) {
+  .cascade-slider_item {
+    width: 100%;
+    max-width: 650px;
+    height: 320px;
+  }
+
+  .slider__title {
+    font-size: 3rem;
+  }
+
+  .slider__desc {
+    max-width: 534px;
+    font-size: 1.6rem;
+  }
+
+  .block__content-title {
+    font-size: 2.6rem;
+  }
+
+  .block__content-subtitle {
+    font-size: 4rem;
+  }
+
+  .advantages__item-content {
+    max-width: 344px;
+  }
+
+  .grid--advantages {
+    row-gap: 58px;
+  }
+
+  .advantages__item-title {
+    font-size: 2rem;
+  }
+
+  .advantages__item-text {
+    font-size: 1.3rem;
+  }
+
+  .advantages__item-number {
+    font-size: 11rem;
+    right: -18%;
+  }
+
+  .block-content-info__contact-tel {
+    margin-top: 15px;
+    font-size: 2.2rem;
+  }
+
+  .block-content-info-right-clients {
+    gap: 34px;
+    margin-right: 10px;
+  }
+
+  .block-content.block-content--contacts .block-content--title {
+    font-size: 4rem;
+  }
+
+  .screen__box-shadow {
+    max-width: 940px;
+  }
+
+  .embet {
+    max-width: 940px;
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+
+  .block-content-info__contact-social a {
+    font-size: 1.8rem;
+  }
+
+  .block-content-info__contact-email {
+    font-size: 1.7rem;
+  }
+
+  .screen__title-svg::after {
+    max-width: 53px;
+  }
+  .screen__innovate-content-center .innovate-content__item-text > span {
+    display: block;
+    margin-left: -27px;
+  }
+
+  .screen__innovate-content-left {
+    margin-right: 16px;
+  }
+
+  .screen__innovate-content-right {
+    margin-left: 16px;
+  }
+
+  .screen__innovate-content-center .innovate-content__item-text {
+    font-size: 14px;
+  }
+  .screen.screen--innovate .screen__box-shadow {
+    max-width: 238px;
+  }
+
+  .screen__wrapper-footer-title {
+    font-size: 1.6rem;
+  }
+
+  .screen__innovate-content-left .innovate-content__item-wrapper, .screen__innovate-content-right .innovate-content__item-wrapper  {
+    padding: 5px 19px;
+  }
+
+  .screen__innovate-content-left .innovate-content__item-text, .screen__innovate-content-right .innovate-content__item-text {
+    font-size: 13px;
+  }
+
+}
+
+@media ( max-width: 1180px) {
+  .cascade-slider_item {
+    width: 100%;
+    max-width: 579px;
+    height: 300px;
+  }
+
+  .slider__desc {
+    max-width: 484px;
+  }
+
+  .block__content-body.our-clients {
+    max-width: 920px;
+  }
+
+  .our-clients__item {
+    width: 151px;
+    height: 151px;
+    padding: 15px;
+  }
+
+  .block-content-info-right-clients {
+    max-width: 650px;
+  }
+
+  .block-content-info {
+    margin-top: 27px;
+  }
+
+  .block-content-info-bottom {
+    margin-top: 30px;
+  }
+
+  .block-content.block-content--contacts .block-content--title {
+    font-size: 3.5rem;
+  }
+
+  .block__content-title.block__content-title--our-client {
+    font-size: 3rem;
+  }
+
+  .block__content-subtitle.block__content-subtitle--our-clients {
+    font-size: 4rem;
+    top: -15px;
+  }
+
+  .advantages__item-content {
+    max-width: 344px;
+
+  }
+
+  .advantages__item-title {
+    font-size: 1.8rem;
+  }
+
+  .advantages__item-number {
+    width: 105px;
+    font-size: 9rem;
+    right: -5%;
+  }
+
+}
+
+@media ( max-width: 1080px) {
+  .cascade-slider_item {
+    width: 100%;
+    max-width: 533px;
+    height: 288px;
+  }
+
+  .slider__title {
+    font-size: 2.6rem;
+
+  }
+
+  .slider__desc {
+    max-width: 449px;
+  }
+
+  .block__content.block__content--flex .owl-carousel {
+    max-width: 571px!important;
+  }
+
+  .block-content-info-button {
+    padding-top: 23px;
+    padding-bottom: 23px;
+  }
+
+  .btn__3um8i {
+    font-size: 1.4rem;
+  }
+
+  .screen__wrapper-footer-title {
+    height: 48px;
+  }
+
+  .screen__wrapper-footer-title > span {
+    height: 24px;
+  }
+
+  .screen.screen--main .screen__wrapper .screen__wrapper-body {
+    margin-top: 80px;
+  }
+
+  .screen__title {
+    max-width: 581px;
+  }
+
+  .lang__item {
+    font-size: 1.6rem;
+  }
 }
